// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeAccordionItemDataGridComponentOptions should normalize complex accordion item data grid component options 1`] = `
{
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./users-panel/users-panel.component",
      "name": "UsersPanelComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "management-accordion",
  "backend": {
    "kind": "none",
  },
  "componentName": "users-panel",
  "context": null,
  "controllerName": "users",
  "dataGrid": {
    "collection": false,
    "identifier": null,
    "inCard": false,
    "isForm": false,
    "itemList": [
      {
        "formControl": null,
        "handlebars": [Function],
        "hasCellDef": true,
        "hasEditCellDef": false,
        "hasHeaderCellDef": false,
        "header": "Name",
        "importList": [],
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "name": "name",
        "pipeList": [],
        "source": null,
        "template": "default-data-grid-item.hbs",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "string",
          "namedImport": null,
          "namespaceImport": null,
        },
      },
      {
        "formControl": null,
        "handlebars": [Function],
        "hasCellDef": true,
        "hasEditCellDef": false,
        "hasHeaderCellDef": false,
        "header": "Email",
        "importList": [],
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "name": "email",
        "pipeList": [],
        "source": null,
        "template": "default-data-grid-item.hbs",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
      },
    ],
    "mode": "plain",
    "propertyList": [
      {
        "isArray": false,
        "isOptional": false,
        "memberList": [],
        "name": "name",
        "source": null,
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "string",
          "namedImport": null,
          "namespaceImport": null,
        },
      },
      {
        "isArray": false,
        "isOptional": false,
        "memberList": [],
        "name": "email",
        "source": null,
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
      },
    ],
    "subtitle": null,
    "title": null,
    "upstream": null,
  },
  "description": null,
  "directory": "management-accordion/users-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "data-grid",
  "modifiers": [],
  "name": "users",
  "nestModule": "management-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "template": "data-grid-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;

exports[`NormalizeAccordionItemDataGridComponentOptions should normalize minimal accordion item data grid component options 1`] = `
{
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./test-adg-panel/test-adg-panel.component",
      "name": "TestAdgPanelComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "parent-accordion",
  "backend": {
    "kind": "none",
  },
  "componentName": "test-adg-panel",
  "context": null,
  "controllerName": "test-adg",
  "dataGrid": {
    "collection": false,
    "identifier": null,
    "inCard": false,
    "isForm": false,
    "itemList": [],
    "mode": "plain",
    "propertyList": [],
    "subtitle": null,
    "title": null,
    "upstream": null,
  },
  "description": null,
  "directory": "parent-accordion/test-adg-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "data-grid",
  "modifiers": [],
  "name": "test-adg",
  "nestModule": "parent-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "template": "data-grid-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;
